<resources>
    <string name="app_name">Nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="author_name">Netology. University of Internet Professions.</string>
    <string name="post_text">Hello, this is the new Netology! Netology once began with online marketing intensives. Then came courses in design, development, analytics and management. We grow ourselves and help students grow, from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has a power that makes you want more, aim higher, run faster. Our mission is to help get on the path of growth, and start the chain of changes → http://netolo.gy//fyb</string>
    <string name="date">02 July at 18:37</string>
    <string name="likes_count">10</string>
    <string name="share_count">5</string>
    <string name="view_count">500</string>
    <string name="remove">Remove</string>
    <string name="save_button">Save button</string>
    <string name="edit_text">Insert text</string>
    <string name="edit">Edit</string>
    <string name="chooser_share_post">Share Post</string>
    <string name="description_post_save">Save Post</string>
    <string name="add_post_button">Add new Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="chooser_play_video">Play video</string>
</resources>